--- a/src/indexSPOTIFY.html
+++ b/src/indexSPOTIFY.html
@@ -1,15 +1,58 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Clone Spotify</title>
-    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="output.css">
-</head>
-<body>
-    <h1 class="bg-red-900">TESTE</h1>
-    <i class="fab fa-instagram"></i>
-</body>
+    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="output.css" />
+  </head>
+  <body>
+    <!-- NAVBAR -->
+    <header>
+      <div class="flex fixed bg-black w-full px-3 md:px-20 py-4">
+        <div>
+          <a href="#">
+            <img src="img/spotify-logo.png" alt="spotify-logo" class="w-20 md:w-(--valor125px)"/>
+          </a>
+        </div>
+        <div class="flex justify-end flex-1 md:hidden text-white text-3xl">
+          <i class="fas fa-bars"></i>
+        </div>
+        <div class="items-end flex-1 text-white font-bold hidden md:flex">
+          <nav class="flex-1">
+            <ul class="flex justify-end flex-1">
+              <li>
+                <a href="#">Premium</a>
+              </li>
+              <li>
+                <a href="#">Ajuda</a>
+              </li>
+              <li> 
+                <a href="#">Baixar</a>
+              </li>
+              <li>
+                <span></span>
+              </li>
+              <li>
+                <a href="#">inscrever-se</a>
+              </li>
+              <li>
+                <a href="#">Login</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </header>
+    <!-- CONTEUDO -->
+    <!-- FOOTER -->
+  </body>
 </html>
